Pulimos detalles y añadimos contenido

--- a/html/series.html
+++ b/html/series.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar Sesión</title>
+    <title>Series</title>
     <!-- Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -80,53 +80,103 @@
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-6 gap-4">
                 <!-- Repite este bloque para más series -->
                 <div class="w-full p-4 transition duration-300 transform hover:scale-105">
-                    <a href="html/detalles.html#avatar" class="block relative rounded overflow-hidden">
-                        <img src="../img/peliculas/avatar.png" alt="Avatar"
+                    <a href="detalles.html#miercoles" class="block relative rounded overflow-hidden">
+                        <img src="../img/series/miercoles.png" alt="Miercoles"
                             class="w-full h-[200px] object-cover object-center hover:opacity-75">
                         <div
                             class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
-                            <p class="font-bold text-lg mb-1">Avatar</p>
-                            <p class="text-sm">Estreno: </p>
-                        </div>
-                    </a>
-                </div>
-                <!-- Fin del bloque repetido -->
-
-                <div class="w-full p-4 transition duration-300 transform hover:scale-105">
-                    <a href="html/detalles.html#titanic" class="block relative rounded overflow-hidden">
-                        <img src="../img/peliculas/titanic.png" alt="Titanic"
-                            class="w-full h-[200px] object-cover object-center hover:opacity-75">
-                        <div
-                            class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
-                            <p class="font-bold text-lg mb-1">Titanic</p>
-                            <p class="text-sm">Estreno: 1997</p>
+                            <p class="font-bold text-lg mb-1">Miércoles</p>
+                            <p class="text-sm">Estreno: 2022</p>
                         </div>
                     </a>
                 </div>
 
                 <div class="w-full p-4 transition duration-300 transform hover:scale-105">
-                    <a href="html/detalles.html#vengadores" class="block relative rounded overflow-hidden">
-                        <img src="../img/peliculas/vengadores-infinity-war.png" alt="Vengadores"
+                    <a href="detalles.html#peaky" class="block relative rounded overflow-hidden">
+                        <img src="../img/series/peaky.png" alt="Miercoles"
                             class="w-full h-[200px] object-cover object-center hover:opacity-75">
                         <div
                             class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
-                            <p class="font-bold text-lg mb-1">Los Vengadores</p>
+                            <p class="font-bold text-lg mb-1">Peaky blinders</p>
+                            <p class="text-sm">Estreno: 2022</p>
+                        </div>
+                    </a>
+                </div>
+
+                
+                <div class="w-full p-4 transition duration-300 transform hover:scale-105">
+                    <a href="detalles.html#lqsa" class="block relative rounded overflow-hidden">
+                        <img src="../img/series/lqsa.png" alt="Miercoles"
+                            class="w-full h-[200px] object-cover object-center hover:opacity-75">
+                        <div
+                            class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
+                            <p class="font-bold text-lg mb-1">La que se avecina</p>
+                            <p class="text-sm">Estreno: 2007</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="w-full p-4 transition duration-300 transform hover:scale-105">
+                    <a href="detalles.html#you" class="block relative rounded overflow-hidden">
+                        <img src="../img/series/you.png" alt="Miercoles"
+                            class="w-full h-[200px] object-cover object-center hover:opacity-75">
+                        <div
+                            class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
+                            <p class="font-bold text-lg mb-1">You</p>
                             <p class="text-sm">Estreno: 2018</p>
                         </div>
                     </a>
                 </div>
 
                 <div class="w-full p-4 transition duration-300 transform hover:scale-105">
-                    <a href="html/detalles.html#vengadores" class="block relative rounded overflow-hidden">
-                        <img src="../img/peliculas/frozen.png" alt="Frozen"
+                    <a href="detalles.html#cristoRey" class="block relative rounded overflow-hidden">
+                        <img src="../img/series/cristoRey.png" alt="Cristo y Rey"
                             class="w-full h-[200px] object-cover object-center hover:opacity-75">
                         <div
                             class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
-                            <p class="font-bold text-lg mb-1">Frozen</p>
-                            <p class="text-sm">Estreno: 2013</p>
+                            <p class="font-bold text-lg mb-1">Cristo y Rey</p>
+                            <p class="text-sm">Estreno: 2023</p>
                         </div>
                     </a>
                 </div>
+
+                <div class="w-full p-4 transition duration-300 transform hover:scale-105">
+                    <a href="detalles.html#bear" class="block relative rounded overflow-hidden">
+                        <img src="../img/series/bear.png" alt="The bear"
+                            class="w-full h-[200px] object-cover object-center hover:opacity-75">
+                        <div
+                            class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
+                            <p class="font-bold text-lg mb-1">The bear</p>
+                            <p class="text-sm">Estreno: 2022</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="w-full p-4 transition duration-300 transform hover:scale-105">
+                    <a href="detalles.html#sex" class="block relative rounded overflow-hidden">
+                        <img src="../img/series/sex.png" alt="Sex education"
+                            class="w-full h-[200px] object-cover object-center hover:opacity-75">
+                        <div
+                            class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
+                            <p class="font-bold text-lg mb-1">Sex education</p>
+                            <p class="text-sm">Estreno: 2019</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="w-full p-4 transition duration-300 transform hover:scale-105">
+                    <a href="detalles.html#gilmore" class="block relative rounded overflow-hidden">
+                        <img src="../img/series/gilmore.png" alt="Gilmore girls"
+                            class="w-full h-[200px] object-cover object-center hover:opacity-75">
+                        <div
+                            class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
+                            <p class="font-bold text-lg mb-1">The Gilmore girls</p>
+                            <p class="text-sm">Estreno: 2007</p>
+                        </div>
+                    </a>
+                </div>
+
+               
 
             </div>
         </section>
