--- a/index.html
+++ b/index.html
@@ -170,52 +170,52 @@
         </div>
       </section>
 
-      <!-- Lista de peliculas más vistas -->
+      <!-- Lista de series más vistas -->
       <section class="container-fluid mx-auto my-8">
         <h2 class="text-2xl font-bold mb-4 text-customDark lg:text-left">Series más vistas</h2>
 
         <div class="flex flex-wrap justify-center lg:justify-start">
           <!-- Repite este bloque para más series -->
           <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/6 p-4 transition duration-300 transform hover:scale-105">
-            <a href="html/detalles.html#avatar" class="block relative rounded overflow-hidden">
-              <img src="../img/peliculas/avatar.png" alt="Avatar"
+            <a href="html/detalles.html#miercoles" class="block relative rounded overflow-hidden">
+              <img src="../img/series/miercoles.png" alt="Miercoles"
                 class="w-full h-[300px] object-cover object-center hover:opacity-75">
               <div class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
-                <p class="font-bold text-lg mb-1">Avatar</p>
-                <p class="text-sm">Estreno: 2009</p>
+                <p class="font-bold text-lg mb-1">Miércones</p>
+                <p class="text-sm">Estreno: 2022</p>
               </div>
             </a>
           </div>
 
           <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/6 p-4 transition duration-300 transform hover:scale-105">
-            <a href="html/detalles.html#titanic" class="block relative rounded overflow-hidden">
-              <img src="../img/peliculas/titanic.png" alt="Titanic"
+            <a href="html/detalles.html#peaky" class="block relative rounded overflow-hidden">
+              <img src="../img/series/peaky.png" alt="Peaky"
                 class="w-full h-[300px] object-cover object-center hover:opacity-75">
               <div class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
-                <p class="font-bold text-lg mb-1">Titanic</p>
-                <p class="text-sm">Estreno: 1997</p>
+                <p class="font-bold text-lg mb-1">Peaky blinders</p>
+                <p class="text-sm">Estreno: 2022</p>
               </div>
             </a>
           </div>
 
           <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/6 p-4 transition duration-300 transform hover:scale-105">
-            <a href="html/detalles.html#avengers" class="block relative rounded overflow-hidden">
-              <img src="../img/peliculas/vengadores-infinity-war.png" alt="Vengadores"
+            <a href="html/detalles.html#lqsa" class="block relative rounded overflow-hidden">
+              <img src="../img/series/lqsa.png" alt="la que se avecina"
                 class="w-full h-[300px] object-cover object-center hover:opacity-75">
               <div class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
-                <p class="font-bold text-lg mb-1">Los Vengadores</p>
+                <p class="font-bold text-lg mb-1">La que se avencina</p>
+                <p class="text-sm">Estreno: 2007</p>
+              </div>
+            </a>
+          </div>
+
+          <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/6 p-4 transition duration-300 transform hover:scale-105">
+            <a href="html/detalles.html#you" class="block relative rounded overflow-hidden">
+              <img src="../img/series/you.png" alt="You"
+                class="w-full h-[300px] object-cover object-center hover:opacity-75">
+              <div class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
+                <p class="font-bold text-lg mb-1">You</p>
                 <p class="text-sm">Estreno: 2018</p>
-              </div>
-            </a>
-          </div>
-
-          <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/6 p-4 transition duration-300 transform hover:scale-105">
-            <a href="html/detalles.html#frozen" class="block relative rounded overflow-hidden">
-              <img src="../img/peliculas/frozen.png" alt="Frozen"
-                class="w-full h-[300px] object-cover object-center hover:opacity-75">
-              <div class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
-                <p class="font-bold text-lg mb-1">Frozen</p>
-                <p class="text-sm">Estreno: 2013</p>
               </div>
             </a>
           </div>
