--- a/html/detalles.html
+++ b/html/detalles.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrarse</title>
+    <title>Detalles</title>
     <!-- Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -74,7 +74,8 @@
     </header>
     <main class="container mx-auto my-8">
         <section class="flex flex-col md:flex-col gap-8">
-            <h2 class="text-2xl font-bold mb-4 text-customDark lg:text-left">No te pierdas ni un detalle de tus películas y series</h2>
+            <h2 class="text-2xl font-bold mb-4 text-customDark lg:text-left">No te pierdas ni un detalle de tus
+                películas y series</h2>
             <article id="titanic" class="bg-white p-4 md:p-8 rounded-lg shadow-lg flex flex-col md:flex-row w-full">
                 <div class="md:w-1/3 flex items-center justify-center">
                     <img src="../img/peliculas/titanic.png" alt="Imagen de Titanic"
@@ -185,16 +186,147 @@
                 </div>
             </article>
 
-            <article id="sinMalosRollos" class="bg-white p-4 md:p-8 rounded-lg shadow-lg flex flex-col md:flex-row w-full">
+            <article id="sinMalosRollos"
+                class="bg-white p-4 md:p-8 rounded-lg shadow-lg flex flex-col md:flex-row w-full">
                 <div class="md:w-1/3 flex items-center justify-center">
                     <img src="../img/peliculas/SinMalosRollos.png" alt="Imagen de sin malos rollos"
                         class="w-full h-60 object-cover rounded-lg">
                 </div>
                 <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
                     <h2 class="text-3xl font-semibold mb-2">Sin malos rollos</h2>
-                    <p class="customDark mb-4">Maddie, una mujer de 32 años en bancarrota, acepta la propuesta de los padres del joven Percy, quienes le ofrecen un coche de lujo a cambio de fingir atracción por su hijo y así aumente su autoestima antes de que vaya a la universidad.</p>
+                    <p class="customDark mb-4">Maddie, una mujer de 32 años en bancarrota, acepta la propuesta de los
+                        padres del joven Percy, quienes le ofrecen un coche de lujo a cambio de fingir atracción por su
+                        hijo y así aumente su autoestima antes de que vaya a la universidad.</p>
                     <p class="customDark mb-1"><strong>Director:</strong> Gene Stupnitsky</p>
                     <p class="customDark mb-1"><strong>Año:</strong> 2023</p>
+                </div>
+            </article>
+
+            <article id="miercoles" class="bg-white p-4 md:p-8 rounded-lg shadow-lg flex flex-col md:flex-row w-full">
+                <div class="md:w-1/3 flex items-center justify-center">
+                    <img src="../img/series/miercoles.png" alt="Imagen de miercoles"
+                        class="w-full h-60 object-cover rounded-lg">
+                </div>
+                <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
+                    <h2 class="text-3xl font-semibold mb-2">Miércoles</h2>
+                    <p class="customDark mb-4">Mientras asiste a la Academia Nevermore, Miércoles Addams intenta dominar
+                        su incipiente habilidad psíquica, frustrar una ola de asesinatos y resolver el misterio que
+                        envolvió a sus padres 25 años atrás.</p>
+                    <p class="customDark mb-1"><strong>Director:</strong> Miles Millar, Alfred Gough</p>
+                    <p class="customDark mb-1"><strong>Año:</strong> 2022</p>
+                </div>
+            </article>
+
+            <article id="peaky" class="bg-white p-4 md:p-8 rounded-lg shadow-lg flex flex-col md:flex-row w-full">
+                <div class="md:w-1/3 flex items-center justify-center">
+                    <img src="../img/series/peaky.png" alt="Imagen de peaky"
+                        class="w-full h-60 object-cover rounded-lg">
+                </div>
+                <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
+                    <h2 class="text-3xl font-semibold mb-2">Peaky blinders</h2>
+                    <p class="customDark mb-4">Birmingham, 1939. Thomas Shelby es el violento líder de una conocida
+                        banda; un jefe del crimen organizado dispuesto a llegar a lo más alto sin importar el
+                        precio.Mientras asiste a la Academia Nevermore, Miércoles Addams intenta dominar
+                        su incipiente habilidad psíquica, frustrar una ola de asesinatos y resolver el misterio que
+                        envolvió a sus padres 25 años atrás.</p>
+                    <p class="customDark mb-1"><strong>Director:</strong> Otto Bathurst, Tom Harper, Colm McCarthy, Tim
+                        Mielants, David Caffrey, Anthony Byrne</p>
+                    <p class="customDark mb-1"><strong>Año:</strong> 2022</p>
+                </div>
+            </article>
+
+            <article id="lqsa" class="bg-white p-4 md:p-8 rounded-lg shadow-lg flex flex-col md:flex-row w-full">
+                <div class="md:w-1/3 flex items-center justify-center">
+                    <img src="../img/series/lqsa.png" alt="Imagen de peaky" class="w-full h-60 object-cover rounded-lg">
+                </div>
+                <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
+                    <h2 class="text-3xl font-semibold mb-2">La que se avecina</h2>
+                    <p class="customDark mb-4">La convivencia se ve alterada por la llegada de una nueva vecina al
+                        edificio, una anciana bastante problemática. Además, Maite sale de la cárcel, Amador, por su
+                        parte, decide volver a la civilización y Enrique se esta adaptando a la soltería.</p>
+                    <p class="customDark mb-1"><strong>Director:</strong> Alberto Caballero</p>
+                    <p class="customDark mb-1"><strong>Año:</strong> 2007</p>
+                </div>
+            </article>
+
+            <article id="you" class="bg-white p-4 md:p-8 rounded-lg shadow-lg flex flex-col md:flex-row w-full">
+                <div class="md:w-1/3 flex items-center justify-center">
+                    <img src="../img/series/you.png" alt="Imagen de you" class="w-full h-60 object-cover rounded-lg">
+                </div>
+                <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
+                    <h2 class="text-3xl font-semibold mb-2">You</h2>
+                    <p class="customDark mb-4">Un joven peligrosamente encantador y extremadamente obsesivo recurre a
+                        métodos poco ortodoxos para introducirse en las vidas de las personas que lo fascinan.</p>
+                    <p class="customDark mb-1"><strong>Director:</strong> Jennifer Lence, Jason Sokoloff, Wayne Carmona
+                    </p>
+                    <p class="customDark mb-1"><strong>Año:</strong> 2018</p>
+                </div>
+            </article>
+
+            <article id="cristoRey" class="bg-white p-4 md:p-8 rounded-lg shadow-lg flex flex-col md:flex-row w-full">
+                <div class="md:w-1/3 flex items-center justify-center">
+                    <img src="../img/series/cristoRey.png" alt="Imagen de cristo rey"
+                        class="w-full h-60 object-cover rounded-lg">
+                </div>
+                <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
+                    <h2 class="text-3xl font-semibold mb-2">Cristo y Rey</h2>
+                    <p class="customDark mb-4">Cuando Ángel Cristo y Bárbara Rey se unen, su matrimonio pronto se
+                        convierte en un negocio millonario, pero detrás de los focos se esconden problemas de
+                        drogadicción, juego e infidelidades.</p>
+                    <p class="customDark mb-1"><strong>Director:</strong> David Molina Encinas; Manu Gómez
+                    </p>
+                    <p class="customDark mb-1"><strong>Año:</strong> 2023</p>
+                </div>
+            </article>
+
+            <article id="bear" class="bg-white p-4 md:p-8 rounded-lg shadow-lg flex flex-col md:flex-row w-full">
+                <div class="md:w-1/3 flex items-center justify-center">
+                    <img src="../img/series/bear.png" alt="Imagen de The bear"
+                        class="w-full h-60 object-cover rounded-lg">
+                </div>
+                <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
+                    <h2 class="text-3xl font-semibold mb-2">Cristo y Rey</h2>
+                    <p class="customDark mb-4">Mientras Carmy lucha por transformar la tienda familiar de bocadillos y a
+                        sí mismo, trabaja junto a un equipo de rudos que al final se revela como su familia elegida.</p>
+                    <p class="customDark mb-1"><strong>Director:</strong> Tyson Bidner
+                    </p>
+                    <p class="customDark mb-1"><strong>Año:</strong> 2022</p>
+                </div>
+            </article>
+
+            <article id="gilmore" class="bg-white p-4 md:p-8 rounded-lg shadow-lg flex flex-col md:flex-row w-full">
+                <div class="md:w-1/3 flex items-center justify-center">
+                    <img src="../img/series/gilmore.png" alt="Imagen de The Gilmore girls"
+                        class="w-full h-60 object-cover rounded-lg">
+                </div>
+                <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
+                    <h2 class="text-3xl font-semibold mb-2">The Gilmore girls</h2>
+                    <p class="customDark mb-4">
+                        Las chicas Gilmore es una serie de televisión de comedia y drama que se emitió en los Estados
+                        Unidos desde el 5 de octubre de 2000, y posteriormente en otros países del mundo. Creada por Amy
+                        Sherman-Palladino, tuvo siete temporadas, y el último episodio se emitió en los Estados Unidos
+                        el 15 de mayo de 2007.</p>
+                    <p class="customDark mb-1"><strong>Director:</strong> Lauren Graham, John Stephens, Gavin Polone,
+                        Chris Long
+                    </p>
+                    <p class="customDark mb-1"><strong>Año:</strong> 2007</p>
+                </div>
+            </article>
+
+            <article id="sex" class="bg-white p-4 md:p-8 rounded-lg shadow-lg flex flex-col md:flex-row w-full">
+                <div class="md:w-1/3 flex items-center justify-center">
+                    <img src="../img/series/sex.png" alt="Imagen de Sex education"
+                        class="w-full h-60 object-cover rounded-lg">
+                </div>
+                <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
+                    <h2 class="text-3xl font-semibold mb-2">Sex education</h2>
+                    <p class="customDark mb-4">
+                        Como el tímido Otis tiene todas las respuestas para dudas sobre sexo porque su madre es
+                        sexóloga, su compañera Maeve le propone montar una consulta en el instituto.</p>
+                    <p class="customDark mb-1"><strong>Director:</strong> Laurie Nunn, Jon Jennings, Ben Taylor, Jamie
+                        Campbell, Clara Couchman
+                    </p>
+                    <p class="customDark mb-1"><strong>Año:</strong> 2019</p>
                 </div>
             </article>
         </section>
