Añadimos contenido a genero y  arreglos pequeños

--- a/html/genero.html
+++ b/html/genero.html
@@ -74,10 +74,130 @@
     </header>
 
     <main>
-      
-            <h2 class="text-2xl font-bold mb-4 text-center">Géneros</h2>
- 
-        </div>
+        <section class="container mx-auto my-8">
+            <h2 class="text-2xl font-bold mb-4 text-customDark lg:text-left">Comedia</h2>
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-6 gap-4">
+                <div class="w-full p-4 transition duration-300 transform hover:scale-105">
+                    <a href="detalles.html#lqsa" class="block relative rounded overflow-hidden">
+                        <img src="../img/series/lqsa.png" alt="Miercoles"
+                            class="w-full h-[200px] object-cover object-center hover:opacity-75">
+                        <div
+                            class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
+                            <p class="font-bold text-lg mb-1">La que se avecina</p>
+                            <p class="text-sm">Estreno: 2007</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="w-full p-4 transition duration-300 transform hover:scale-105">
+                    <a href="detalles.html#bear" class="block relative rounded overflow-hidden">
+                        <img src="../img/series/bear.png" alt="The bear"
+                            class="w-full h-[200px] object-cover object-center hover:opacity-75">
+                        <div
+                            class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
+                            <p class="font-bold text-lg mb-1">The bear</p>
+                            <p class="text-sm">Estreno: 2022</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="w-full p-4 transition duration-300 transform hover:scale-105">
+                    <a href="detalles.html#sex" class="block relative rounded overflow-hidden">
+                        <img src="../img/series/sex.png" alt="Sex education"
+                            class="w-full h-[200px] object-cover object-center hover:opacity-75">
+                        <div
+                            class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
+                            <p class="font-bold text-lg mb-1">Sex education</p>
+                            <p class="text-sm">Estreno: 2019</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="w-full p-4 transition duration-300 transform hover:scale-105">
+                    <a href="detalles.html#gilmore" class="block relative rounded overflow-hidden">
+                        <img src="../img/series/gilmore.png" alt="Gilmore girls"
+                            class="w-full h-[200px] object-cover object-center hover:opacity-75">
+                        <div
+                            class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
+                            <p class="font-bold text-lg mb-1">The Gilmore girls</p>
+                            <p class="text-sm">Estreno: 2007</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </section>
+        <section id="animacion" class="container mx-auto my-8">
+            <h2 class="text-2xl font-bold mb-4 text-customDark lg:text-left">Animación</h2>
+
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-6 gap-4">
+                <!-- Repite este bloque para más películas -->
+                <div class="w-full p-4 transition duration-300 transform hover:scale-105">
+                    <a href="detalles.html#avatar" class="block relative rounded overflow-hidden">
+                        <img src="../img/peliculas/avatar.png" alt="Avatar"
+                            class="w-full h-[200px] object-cover object-center hover:opacity-75">
+                        <div
+                            class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
+                            <p class="font-bold text-lg mb-1">Avatar</p>
+                            <p class="text-sm">Estreno: </p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="w-full p-4 transition duration-300 transform hover:scale-105">
+                    <a href="detalles.html#frozen" class="block relative rounded overflow-hidden">
+                        <img src="../img/peliculas/frozen.png" alt="Frozen"
+                            class="w-full h-[200px] object-cover object-center hover:opacity-75">
+                        <div
+                            class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
+                            <p class="font-bold text-lg mb-1">Frozen</p>
+                            <p class="text-sm">Estreno: 2013</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="w-full p-4 transition duration-300 transform hover:scale-105">
+                    <a href="detalles.html#spiderman" class="block relative rounded overflow-hidden">
+                        <img src="../img/peliculas/spiderman.png" alt="Spiderman"
+                            class="w-full h-[200px] object-cover object-center hover:opacity-75">
+                        <div
+                            class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
+                            <p class="font-bold text-lg mb-1">Spiderman: Homecoming</p>
+                            <p class="text-sm">Estreno: 2017</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </section>
+        <section class="container mx-auto my-8">
+            <h2 class="text-2xl font-bold mb-4 text-customDark lg:text-left">Drama</h2>
+
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-6 gap-4">
+
+                <div class="w-full p-4 transition duration-300 transform hover:scale-105">
+                    <a href="detalles.html#titanic" class="block relative rounded overflow-hidden">
+                        <img src="../img/peliculas/titanic.png" alt="Titanic"
+                            class="w-full h-[200px] object-cover object-center hover:opacity-75">
+                        <div
+                            class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
+                            <p class="font-bold text-lg mb-1">Titanic</p>
+                            <p class="text-sm">Estreno: 1997</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="w-full p-4 transition duration-300 transform hover:scale-105">
+                    <a href="detalles.html#culpaMia" class="block relative rounded overflow-hidden">
+                        <img src="../img/peliculas/culpaMia.png" alt="CulpaMia"
+                            class="w-full h-[200px] object-cover object-center hover:opacity-75">
+                        <div
+                            class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
+                            <p class="font-bold text-lg mb-1">Culpa mía</p>
+                            <p class="text-sm">Estreno: 2023</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </section>
 
     </main>
 
