--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <div class="carousel-caption d-none d-md-block">
                 <h5>Animaciones</h5>
                 <p>Descubre nuestras animaciones increíbles</p>
-                <a href="/html/genero.html#animaciones" class="btn btn-primary">Ver más</a>
+                <a href="/html/genero.html#animacion" class="btn btn-primary">Ver más</a>
               </div>
             </div>
             <div class="carousel-item">
