Arreglo y contenido para favoritos

--- a/html/favoritos.html
+++ b/html/favoritos.html
@@ -66,7 +66,7 @@
                     <i class="fa-solid fa-star"></i>
                 </a>
                 <!-- Icono de usuario y enlace a login y registro -->
-                <a href="html/login.html" class="text-customWhite hover:text-customLightBlue">
+                <a href="login.html" class="text-customWhite hover:text-customLightBlue">
                     <i class="fa-solid fa-user"></i>
                 </a>
             </div>
@@ -77,35 +77,49 @@
         <h2 class="text-2xl font-bold mb-4 text-customDark lg:text-left">Tus favoritos</h2>
         <section class="flex flex-col md:flex-col gap-8">
             <!-- Película Titanic -->
-            <article id="titanic" class="bg-yellow-200 p-4 md:p-8 rounded-lg shadow-lg flex flex-col md:flex-row w-full">
+            <article id="titanic"
+                class="bg-yellow-200 p-4 md:p-8 rounded-lg shadow-lg flex flex-col md:flex-row w-full">
                 <div class="md:w-1/3 flex items-center justify-center">
-                    <img src="../img/peliculas/titanic.png" alt="Imagen de Titanic" class="w-full h-60 object-cover rounded-lg">
+                    <img src="../img/peliculas/titanic.png" alt="Imagen de Titanic"
+                        class="w-full h-60 object-cover rounded-lg">
                 </div>
                 <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
                     <h2 class="text-3xl font-semibold mb-2">Titanic</h2>
-                    <p class="customDark mb-4">Jack (DiCaprio), un joven artista, en una partida de cartas gana un pasaje para América, en el Titanic...</p>
                     <p class="customDark mb-1"><strong>Director:</strong> James Cameron</p>
                     <p class="customDark mb-1"><strong>Año:</strong> 1997</p>
-                    <p class="customDark"><strong>Clasificación:</strong> PG-13</p>
                 </div>
             </article>
-    
+
             <!-- Película Avatar -->
             <article id="avatar" class="bg-yellow-200 p-4 md:p-8 rounded-lg shadow-lg flex flex-col md:flex-row w-full">
                 <div class="md:w-1/3 flex items-center justify-center">
-                    <img src="../img/peliculas/avatar.png" alt="Imagen de Avatar" class="w-full h-60 object-cover rounded-lg">
+                    <img src="../img/peliculas/avatar.png" alt="Imagen de Avatar"
+                        class="w-full h-60 object-cover rounded-lg">
                 </div>
                 <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
-                    <h2 class="text-3xl font-semibold mb-2">Título de la Película</h2>
-                    <p class="customDark mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                    <h2 class="text-3xl font-semibold mb-2">Avatar</h2>
+
                     <p class="customDark mb-1"><strong>Director:</strong> Nombre del Director</p>
                     <p class="customDark mb-1"><strong>Año:</strong> 2023</p>
-                    <p class="customDark"><strong>Clasificación:</strong> PG-13</p>
+                </div>
+            </article>
+
+            <!-- Serie Miercoles -->
+            <article id="miercoles"
+                class="bg-yellow-200 p-4 md:p-8 rounded-lg shadow-lg flex flex-col md:flex-row w-full">
+                <div class="md:w-1/3 flex items-center justify-center">
+                    <img src="../img/series/miercoles.png" alt="Imagen de Miercoles"
+                        class="w-full h-60 object-cover rounded-lg">
+                </div>
+                <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
+                    <h2 class="text-3xl font-semibold mb-2">Miércoles</h2>
+                    <p class="customDark mb-1"><strong>Director:</strong> Miles Millar, Alfred Gough</p>
+                    <p class="customDark mb-1"><strong>Año:</strong> 2023</p>
                 </div>
             </article>
         </section>
-    </main> 
-    
+    </main>
+
     <footer class="bg-customDark text-customWhite py-2">
         <nav class="container-fluid flex flex-col lg:flex-row lg:justify-between text-center">
             <!-- Nombre del sitio -->
